<resources>
    <string name="app_name">Debater</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discussion_name">discussion name</string>
    <string name="description">description</string>

    <string name="argument_in_thesis_text">%1$s
        %2$s
        </string>

    <string name="debate_card_created_by">Created by %1$s</string>

    <string name="debate_string_cutter">%1$s… Read more</string>

    <!--  debate_open -->
    <string name="debate_open_btn_enter">Join</string>

    <!--  dialog_new_argument  -->
    <string name="create_new">Create New</string>
    <string name="argument_title_text">Argument title</string>
    <string name="argument_title_input">Write here your title</string>
    <string name="argument_statement_text">Argument statement</string>
    <string name="argument_statement_input">Write here your statement</string>
    <string name="argument_response_text">Responding to</string>

    <!--  dialog_new_debate  -->
    <string name="Dialog_text">Create new</string>
    <string name="debate_name">Enter debate name</string>
    <string name="debate_description">Enter debate description</string>
    <string name="debate_hasReferee">Referee</string>

    <!--  dialog_new_thesis  -->
    <string name="Dialog_text_new_thesis">Create new</string>
    <string name="thesis_title_text">Thesis title</string>
    <string name="thesis_title_input">Write your title here</string>
    <string name="thesis_short_text">Thesis short description</string>
    <string name="thesis_short_input">Write your abstract here</string>
    <string name="thesis_statement_text">Thesis statement</string>
    <string name="thesis_statement_input">Write your statement here</string>
    <string name="thesis_response_to_text">Answering to</string>
    <string name="thesis_args_text">Thesis arguments</string>
    <string name="btn_answer1">Write argument</string>
    <string name="btn_answer2">Response to second argument</string>
    <string name="btn_answer3">Response to third argument</string>

    <!--  fragment_info  -->
    <string name="mascot_image">mascot_image</string>
    <string name="facepic1">facepic1</string>
    <string name="facepic2">facepic2</string>
    <string name="facepic3">facepic3</string>
    <string name="info_hello">Hello</string>
    <string name="info_text">It is a simple text-based debate project on the Internet that implements the structured approach to information needed to formalize the discussion. This is Ivan Trushin`s bachelor project, so don`t expect too much</string>
    <string name="main_dev_text">Main Dev</string>
    <string name="ui_designer_text">UI Designer</string>
    <string name="backend_dev_text">Backend</string>

    <!--  fragment_login  -->
    <string name="hint_emailAddress">Enter Your email address</string>
    <string name="editTextTextEmailAddress">johnDoe88@gmail.com</string>
    <string name="hint_password">Enter Your password</string>
    <string name="editTextTextPassword">12345Qwe</string>
    <string name="hint_username">Enter Your nickname</string>
    <string name="editTextTextPersonName">JohnDoe</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>

    <!--  fragment_settings  -->
    <string name="settings_day_night">Night mode</string>

    <!--  fragment_user  -->
    <string name="profile_edit">Edit profile</string>
    <string name="username">John Doe</string>
    <string name="login">sator_rotas</string>

    <!--  thesis_change_rights  -->
    <string name="thesis_change_rights_write_checkbox">Write rights</string>
    <string name="thesis_change_rights_no">No</string>
    <string name="thesis_change_rights_ok">OK</string>
    <string name="thesis_change_rights_exit">Exit from discussion</string>

    <!--  thesis_open  -->
    <string name="btn_answer">Give a response</string>

    <!--  thesis_options  -->
    <string name="thesis_options_text3">List of participants</string>
    <string name="thesis_options_text1">Creator</string>

    <!--  fragment_debate  -->
    <string name="debate_search">Find debate</string>

    <!--  nav_draw_items  -->
    <string name="item_settings">Settings</string>
    <string name="item_discussions">Discussions</string>

</resources>