<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.gedar0082.debater.viewmodel.DebateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/one_debate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:elevation="0dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/debate_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp"
            android:background="@drawable/card_round">

            <LinearLayout
                android:id="@+id/list_item_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_round"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dis_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/stix"
                    android:gravity="start"
                    android:text=""
                    android:textColor="@color/textPrimaryDark"
                    android:textSize="26sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>

<!--                <TextView-->
<!--                    android:id="@+id/dis_description_text"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/stix"-->
<!--                    android:gravity="center"-->
<!--                    android:text=""-->
<!--                    android:textColor="@color/textPrimary"-->
<!--                    android:textSize="18sp" />-->

                <LinearLayout
                    android:id="@+id/list_item_inner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/debate_date_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/stix"
                        android:gravity="start"
                        android:text=""
                        android:textColor="@color/textPrimary"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp">
                    </TextView>

                    <TextView
                        android:id="@+id/debate_card_created_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/stix"
                        android:gravity="start"
                        android:text=""
                        android:textColor="@color/textPrimary"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>