<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.gedar0082.debater.viewmodel.ArgumentMapViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/am_node"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/card_round5"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/node_color"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <TextView
            android:id="@+id/argument_node_text"
            android:layout_width="200dp"
            android:layout_height="100dp"
            />

<!--        <TextView-->
<!--            android:id="@+id/argument_node_desc"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            />

        <TextView
            android:id="@+id/node_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/stix"
            />

    </LinearLayout>
</layout>