...
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/card_round"
    android:id="@+id/debate_open">

    <TextView
        android:id="@+id/debate_open_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stix"
...
        android:layout_marginStart="15dp"
        />



    <TextView
        android:id="@+id/debate_open_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stix"
        android:gravity="start"
        android:text=""
        android:textColor="@color/textPrimary"
...
