...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_round">

        <LinearLayout
            android:id="@+id/thesis_open"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thesis_open_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stix"
                android:textSize="14sp"
                android:textColor="@color/textPrimary"
                android:layout_marginHorizontal="15dp"
...
